--- a/src/app/pages/ingredientes/ingrediente/list/ingrediente.component.html
+++ b/src/app/pages/ingredientes/ingrediente/list/ingrediente.component.html
@@ -18,18 +18,12 @@
 <!-- CONTENT -->
 <ng-template #contentT>
   <!-- Tabs -->
-  <div class="mb-3 border-b border-slate-200">
-    <nav class="flex gap-6">
-      <button class="py-2 -mb-[1px] border-b-2" [class.border-rose-400]="tab()==='all'"
-        [class.border-transparent]="tab()!=='all'" (click)="setTab('all')">Todos</button>
-
-      <button class="py-2 -mb-[1px] border-b-2" [class.border-rose-400]="tab()==='active'"
-        [class.border-transparent]="tab()!=='active'" (click)="setTab('active')">Activos</button>
-
-      <button class="py-2 -mb-[1px] border-b-2" [class.border-rose-400]="tab()==='inactive'"
-        [class.border-transparent]="tab()!=='inactive'" (click)="setTab('inactive')">Inactivos</button>
-    </nav>
-  </div>
+  <nav class="tabs">
+    <button class="tab tab--all" [class.is-active]="tab==='all'" (click)="setTab('all')">Todos</button>
+    <button class="tab tab--active" [class.is-active]="tab==='active'" (click)="setTab('active')">Activos</button>
+    <button class="tab tab--inactive" [class.is-active]="tab==='inactive'"
+      (click)="setTab('inactive')">Inactivos</button>
+  </nav>
 
   <!-- Search -->
   <div class="mb-3">
@@ -40,20 +34,18 @@
 
   <!-- Tabla -->
   <div class="card overflow-hidden">
-    <app-table [columns]="columns" [rows]="rows()" [loading]="loading()" [emptyText]="'No hay ingredientes'"
-      [sort]="{ key: sortKey(), dir: sortDir() }" (sortChange)="onSort($event)" [actionsTpl]="actionsTpl">
-
+    <app-table [columns]="columns" [rows]="rows" [loading]="loading" [emptyText]="'No hay ingredientes'"
+      [sort]="{ key: sortKey, dir: sortDir }" (sortChange)="onSort($event)" [actionsTpl]="actionsTpl">
       <ng-template #actionsTpl let-r>
-        <td class="td py-2 text-right">
-          <app-edit [to]="['/ingredientes', r.id, 'editar']" ariaLabel="Editar ingrediente"
-            title="Editar ingrediente"></app-edit>
-        </td>
+        <app-edit [to]="['/ingredientes', r.id, 'editar']" ariaLabel="Editar ingrediente"
+          title="Editar ingrediente"></app-edit>
       </ng-template>
     </app-table>
 
-    <app-paginator class="mt-2" [from]="from()" [to]="to()" [total]="total()" [pageIndex]="page()"
-      [pageSize]="pageSize()" [pageSizeOptions]="[5,10,20,50]" [maxPage]="maxPage()" (sizeChange)="setPageSize($event)"
-      (prev)="prev()" (next)="next()">
+    <!-- Paginación -->
+    <app-paginator class="mt-2" [from]="from()" [to]="to()" [total]="total" [pageIndex]="page" [pageSize]="pageSize"
+      [pageSizeOptions]="[10,20,30,50]" [maxPage]="maxPage()" (sizeChange)="setPageSize($event)" (prev)="prev()"
+      (next)="next()">
     </app-paginator>
   </div>
 </ng-template>
